text-align fix

--- a/app/styles/app/message.scss
+++ b/app/styles/app/message.scss
@@ -10,6 +10,9 @@
 		color: #555;
 		font-size: 16px;
 		margin-bottom: 6px;
+		&--right {
+			text-align: right;
+		}
 	}
 	&__text {
 		color: #888;
